<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="game_pref_ui_pal_ntsc_switch_category"
        android:title="@string/pref_video_settings">
        <nostalgia.framework.ui.preferences.ControllableListPreference
            android:key="game_pref_ui_pal_ntsc_switch"
            android:summary="@string/game_pref_ui_pal_ntsc_desc"
            android:title="@string/game_pref_ui_pal_ntsc" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="game_pref_other_category"
        android:title="@string/pref_other_settings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="game_pref_zapper"
            android:title="@string/game_pref_zapper" />

        <Preference android:title="@string/general_pref">
            <intent android:action="@string/action_general_pref">
                <extra
                    android:name=":android:no_headers"
                    android:value="true" />
                <extra
                    android:name=":android:show_fragment"
                    android:value="nostalgia.framework.ui.preferences.GeneralPreferenceFragment" />
            </intent>
        </Preference>


    </PreferenceCategory>

</PreferenceScreen>