<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/game_dialog_bck"
        android:orientation="vertical"
        android:padding="35dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_new_cheat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/act_cheats_dialog_add_label"
                android:textColor="@color/dialog_main_color" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dialog_new_cheat_chars"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/act_cheats_dialog_chars_hint"
                android:inputType="textCapCharacters|textNoSuggestions|textFilter"
                android:maxLength="11"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/dialog_new_cheat_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/act_cheats_dialog_desc_hint"
                android:inputType="textCapSentences"
                android:lines="5"
                android:padding="5dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/dialog_new_cheat_save"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_shape"
            android:padding="10dp"
            android:text="@string/act_cheats_dialog_save"
            android:textColor="@color/dialog_main_color" />
    </LinearLayout>

</LinearLayout>