<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/game_dialog_bck"
        android:orientation="vertical"
        android:padding="35dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_select_server_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/act_remote_controller_select_server"
                android:textColor="@color/dialog_main_color"
                android:textSize="25sp" />

            <ProgressBar
                android:id="@+id/dialog_select_server_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:indeterminateDrawable="@anim/white_progress_rotate_anim" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_margin="5dp"
            android:background="@color/dialog_main_color" />

        <ListView
            android:id="@+id/dialog_select_server_list"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:listSelector="#33b5e5"
            tools:listitem="@layout/row_server_select_item" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_margin="5dp"
            android:background="@color/dialog_main_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialog_select_server_btn_manually"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_button_shape"
                android:padding="10dp"
                android:text="@string/act_remote_controller_set_manually"
                android:textColor="@color/dialog_main_color" />

            <Button
                android:id="@+id/dialog_select_server_btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_button_shape"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@color/dialog_main_color" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>